objects/delphiDemo__MachineOpportunityRecord__c.object
<CustomObject>
    <fields>
        <fullName>delphiDemo__OpportunityDate__c</fullName>
        <label>OpportunityDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>delphiDemo__OpportunityId__c</fullName>
        <label>OpportunityId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>delphiDemo__timePeriod__c</fullName>
        <label>timePeriod</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>MachineOpportunityRecord</label>
    <listViews>
        <fullName>delphiDemo__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MachineOpportunityRecord Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MachineOpportunityRecords</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>